--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ ver 0.21.26 (not yet released)
   - bzip2: fix crash on corrupt bzip2 file
   - bzip2: flush output at end of input file
   - iso9660: fix unaligned reads
+  - iso9660: support seeking
   - zzip: fix crash on corrupt ZIP file
 * decoder
   - sndfile: fix lost samples at end of file
