db/update: scan CUE playlist contents
This commit adds a PlaylistPlugin attribute "as_folder" which for now
is only enabled in the "CUE" playlist plugin (which handles separate
"*.cue" files).  If a playlist with this flag set is being scanned
during database update, it will be parsed and its contents will be
added to the database.  This allows clients to inspect them like
directories and its contents will be searchable.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/39

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,8 @@ ver 0.22 (not yet released)
   - ffmpeg: allow partial reads
 * archive
   - iso9660: support seeking
+* playlist
+  - cue: integrate contents in database
 * decoder
   - mad: remove option "gapless", always do gapless
   - sidplay: add option "default_genre"
