decoder/mpcdec: fix bogus ReplayGain values
Apparently, libmpcdec sets gain/peak variables to zero if they are not
present.  This clashes with our formula and results in bogus values
which cause noise during playback.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/640

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.21.15 (not yet released)
 * decoder
   - dsdiff, dsf: fix displayed bit rate
+  - mpcdec: fix bogus ReplayGain values
 * output
   - solaris: fix build with glibc 2.30
 
