--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.21.15 (not yet released)
+ver 0.21.15 (2019/09/25)
 * decoder
   - dsdiff, dsf: fix displayed bit rate
   - mpcdec: fix bogus ReplayGain values
