db/update/Walk: fix crash when music_directory is not a directory
Add a runtime sanity check to avoid the assertion failure.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/660

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.16 (not yet released)
+* update
+  - fix crash when music_directory is not a directory
 
 ver 0.21.15 (2019/09/25)
 * decoder
