--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.16 (not yet released)
+* storage
+  - curl: request the "resourcetype" property to fix database update
 * update
   - fix crash when music_directory is not a directory
 
