queue/PlaylistEdit: fix relative destination offset when moving a range
Commit 13208bf5a7c91a6406195139f1068f173ccdac94 added range support to
the `move` command, but applied the wrong offset to the `to` variable.
When the source range is before the current song, and the song thus
gets decremented by the range size, then the final destination offset
must also be decremented by the range size.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/663

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.16 (not yet released)
+* queue
+  - fix relative destination offset when moving a range
 * storage
   - curl: request the "resourcetype" property to fix database update
   - curl: URL-encode more paths
