--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ ver 0.22 (not yet released)
   - relax the ISO 8601 parser: allow omitting the time of day and the "Z"
     suffix
 * tags
-  - new tags "Grouping" (for ID3 "TIT1") and "Work"
+  - new tags "Grouping" (for ID3 "TIT1"), "Work" and "Conductor"
 * input
   - curl: support "charset" parameter in URI fragment
   - ffmpeg: allow partial reads
