archive/zzip: improve error reporting
Most importantly, this commit translates ZZIP_ENOENT to
std::system_error(ENOENT) so IsFileNotFound() returns true and
find_stream_art() can suppress the log line.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.17 (not yet released)
+* archive
+  - zzip: improve error reporting
 * outputs
   - jack: mark ports as terminal
   - shout: declare metadata as UTF-8
