--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.21.17 (not yet released)
+ver 0.21.17 (2019/12/16)
 * protocol
   - relax the ISO 8601 parser: allow omitting field separators, the
     time of day and the "Z" suffix
