storage/curl: move start call out of the constructor
This can cause request completion in the I/O thread before this
constructor returns, leaving the object in an abstract state, causing
a crash due to pure virtual method call.  We should not start the
request until this object is fully constructed.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/665

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.21.18 (not yet released)
 * output
   - alsa: fix hang bug with ALSA "null" outputs
+* storage
+  - curl: fix crash bug
 * reduce unnecessary CPU wakeups
 
 ver 0.21.17 (2019/12/16)
