--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.19 (not yet released)
+* output
+  - pulse: obey Pulse's maximum sample rate (fixes DSD128 playback)
 * fix build failure with clang 10
 
 ver 0.21.18 (2019/12/24)
