--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.19 (not yet released)
+* configuration
+  - allow overriding top-level settings in includes
 * output
   - pulse: obey Pulse's maximum sample rate (fixes DSD128 playback)
 * fix build failure with clang 10
