--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.21.19 (not yet released)
+ver 0.21.19 (2020/01/17)
 * configuration
   - allow overriding top-level settings in includes
 * output
