--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.20 (not yet released)
+* decoder
+  - vorbis, opus: fix seeking in small files
 
 ver 0.21.19 (2020/01/17)
 * configuration
