--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.21.20 (not yet released)
 * decoder
   - audiofile, ffmpeg, sndfile: handle MIME type "audio/wav"
+  - ffmpeg: fix playback of AIFF and TTA
   - vorbis, opus: fix seeking in small files
 
 ver 0.21.19 (2020/01/17)
