protocol/ArgParser: cast seek offset to SignedSongTime
"The issue is that ParseCommandArgSignedSongTime parses with
SongTime::FromS, not SignedSongTime::FromS, before casting back to a
SignedSongTime for the return. With x86 overflow rules this doesn't
matter, but on ARM the first cast turns negative values to zero."

Closes https://github.com/MusicPlayerDaemon/MPD/issues/757

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ ver 0.21.20 (not yet released)
   - audiofile, ffmpeg, sndfile: handle MIME type "audio/wav"
   - ffmpeg: fix playback of AIFF and TTA
   - vorbis, opus: fix seeking in small files
+* fix backwards seeking on ARM (and other non-x86 CPUs)
 
 ver 0.21.19 (2020/01/17)
 * configuration
