archive/iso9660: skip empty filenames
Aparently, libcdio sometimes returns empty filenames, causing MPD
crashes.  This shouldn't really happen, and I consider this a libcdio
bug - but if it happens, people blame MPD, so let's add a check.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/776

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.21 (not yet released)
+* archive
+  - iso9660: skip empty file names to work around libcdio bug
 * decoder
   - gme: ignore empty tags
 * output
