support selective resample based on 44k and 48k clocks
Adhere 44.1/48 base when resampling
------------------------------------------------
The samplerate of most regular digital audio is based on two different
base clocks; 44.1kHz and 48 kHz.

* The 44.1kHz based samplerates are 44.1 , 88.2, 176.4 and 352.8 kHz.
* The 48kHz based samplerates are 48, 96, 192 and 384 kHz.

If the conversion (up or down) isn't in the same base range, the
conversion gets more complex. And due this will also consume more cpu
resources. See the measurement below for the results.

When the target samplerate is set with  ``audio_output_format``,  the
new ``selective_44k_resample`` option adheres the clock base 44.1/48.
``audio_output_format`` is set to the  target samplerate with for the
48k range, but now for source from 44.1 base range the nearest, lower,
44.1 base samplerate is used.

For example=
* source 44.1k target 96k final is 88.2k
* source 88.2k target 96k final is 88.2k
* source 48k target 96k final is 96k

Performance Measurements
------------------------------------------------
Performance measurement environment.
- Pi 2B
- Raspbian Buster Lite 10.2
- kernel 4.19.97-v7+
- SoX 14.4.2

Tests are run on a ramdisk. As test file the default audio from Moode is
 used. To prevent testing decoder/encoders test files are wave files.

Performed tests=
- 44.1/16 to 96/24
- 48/16 to 96/24
- 44.1/16 to 88.2/24

pi@moodedev=/mnt/ramdisk $ perf stat sox LRMonoPhase4_48_16.wav -b 24
LRMonoPhase4_96_24.wav rate -v 96000

 Performance counter stats for 'sox LRMonoPhase4_48_16.wav -b 24
 LRMonoPhase4_96_24.wav rate -v 96000'=

      2,574.54 msec task-clock=u       =    0.999 CPUs utilized
             0      context-switches=u =    0.000 K/sec
             0      cpu-migrations=u   =    0.000 K/sec
           245      page-faults=u      =   95.183 M/sec
 2,169,128,394      cycles=u           = 842707.224 GHz
 1,492,424,845      instructions=u     =    0.69  insn per cycle
   103,511,129      br

--- a/doc/mpd.conf.5
+++ b/doc/mpd.conf.5
@@ -108,6 +108,11 @@ for the format of this parameter.  Multiple audio_output sections may be
 specified.  If no audio_output section is specified, then MPD will scan for a
 usable audio output.
 .TP
+.B selective_44k_resample <yes or no>
+When enabled adhere the 44.1k or 48k clock base if a song requires resampling.
+For example if the \fBaudio_output\fP is set to 96k, a 44.1 song will be resampled to 88.2.
+The default is no.
+.TP
 .B replaygain <off or album or track or auto>
 If specified, mpd will adjust the volume of songs played using ReplayGain tags
 (see <\fBhttp://www.replaygain.org/\fP>).  Setting this to "album" will adjust
