--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.21 (not yet released)
+* configuration
+  - fix bug in "metadata_to_use" setting
 * archive
   - iso9660: skip empty file names to work around libcdio bug
 * decoder
