raise default "max_connections" value to 100
Documentation says the limit is 5, but it was really 10 (at least
since 2004).  But since MPD wants to promote using many small clients
idling around, and these clients consume only very few resources, it
seems reasonable to raise this limit's default value.

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ ver 0.21.21 (not yet released)
   - gme: ignore empty tags
 * output
   - solaris: port to NetBSD
+* raise default "max_connections" value to 100
 
 ver 0.21.20 (2020/02/16)
 * decoder
