--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.21.22 (not yet released)
 * playlist
   - rss: support MIME type application/xml
+* mixer
+  - android: new mixer plugin for "sles" output
 
 ver 0.21.21 (2020/03/19)
 * configuration
