--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.22 (not yet released)
+* input
+  - curl: fix streaming errors on Android
 * playlist
   - rss: support MIME type application/xml
 * mixer
