fs/io/GunzipReader: increase buffer size to 64 kB
Reduces I/O overhead while reading a compressed database file.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.22 (not yet released)
+* database
+  - simple: reduce I/O overhead while reading database file
 * input
   - curl: fix streaming errors on Android
 * playlist
