--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.23 (not yet released)
+* storage
+  - curl: fix corrupt "href" values in the presence of XML entities
 * output
   - alsa: implement channel mapping for 5.0 and 7.0
 * player
