--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,7 @@ ver 0.22 (not yet released)
   - jack: add option "auto_destination_ports"
   - jack: report error details
   - pulse: add option "media_role"
+  - solaris: support S8 and S32
 * lower the real-time priority from 50 to 40
 * switch to C++17
   - GCC 7 or clang 4 (or newer) recommended
