storage/curl: fix path comparison when the server escapes differently
Unescape the base path and the path coming from the server (href) to fix the
comparison when the server uses different escaped characters.

The outputted name need to be unescaped. Doing that before or after the
HrefToEscapedName() call should not change the current behavior.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.21.23 (not yet released)
 * storage
   - curl: fix corrupt "href" values in the presence of XML entities
+  - curl: unescape "href" values
 * output
   - alsa: implement channel mapping for 5.0 and 7.0
 * player
