lib/icu/CaseFold: remove Windows implementation
Reverts commit fb3564fbe76a10a0825bd06c0ff19f481d94b835

LCMapStringEx() doesn't do what I imagined it would do 5 years ago.
D'oh!

Closes https://github.com/MusicPlayerDaemon/MPD/issues/820

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ ver 0.21.23 (not yet released)
   - alsa: implement channel mapping for 5.0 and 7.0
 * player
   - drain outputs at end of song in "single" mode
+* Windows
+  - fix case insensitive search
 
 ver 0.21.22 (2020/04/02)
 * database
