--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ ver 0.21.23 (not yet released)
 * storage
   - curl: fix corrupt "href" values in the presence of XML entities
   - curl: unescape "href" values
+* input
+  - nfs: fix crash bug
 * decoder
   - gme: adapt to API change in the upcoming version 0.7.0
 * output
