command/all: "tagtypes" requires no permissions
The command is used to configure the client's connection, and this
shouldn't require any permissions.  The client should be able to do
that before sending a password.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.24 (not yet released)
+* protocol
+  - "tagtypes" requires no permissions
 * fix unit test failure
 
 ver 0.21.23 (2020/04/23)
