Add tags relevant to classical music.
This commit adds some tags that are (mostly) interesting for listeners
of classical music.

Ensemble
--------
This is an ensemble that is playing the music, such as Wiener
Philharmoniker. The tag can be used to distinguish the ensemble from the
conductor, composer, soloist, and ensemble, that are generally all in
the "ARTIST" tag.

Movement
-------
The movement number and movement (name) of this track, i.e.  "II" and
"Allegro".

ComposerSort
------------
Allows us to look for Beethoven's 9th under B, for Beethoven, not L for
Ludwig.

Location
--------
This is the location of the recording, e.g. "Wiener Musikverein".

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ ver 0.23 (not yet released)
 * output
   - pipewire: new plugin
   - snapcast: new plugin
+* tags
+  - new tags "ComposerSort", "Ensemble", "Movement", "MovementNumber", and "Location"
 
 ver 0.22.7 (not yet released)
 * protocol
