input/uring: new input plugin using io_uring
This is the final piece of the series to establish io_uring support on
Linux.

MPD doesn't need io_uring for its efficient bulk I/O support, but to
allow file I/O to be cancelled.  This is a big problem on CIFS/NFS
mounts where processes sleep uninterruptable if the file server
disappears, deadlocking MPD.

With io_uring, a flaky NFS connection allows MPD to continue to work
(even though there are still deadlocks inside MPD which need to be
addressed).

This plugin does not yet use cancellable `open()` using
`IORING_OP_OPENAT`.  This will be implemented later.

Lots of other optimization opportunities for io_uring are still
missing as well - for example the database update could benefit a lot,
but unfortunately, io_uring doesn't have `readdir()` support just yet.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ ver 0.22 (not yet released)
 * input
   - curl: support "charset" parameter in URI fragment
   - ffmpeg: allow partial reads
+  - io_uring: new plugin for local files on Linux (using liburing)
 * archive
   - iso9660: support seeking
 * playlist
