db/simple: fix crash when mounting twice
The `db->close()` call was a `nullptr` dereference because the `db`
variable had already been moved.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/839

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.21.24 (not yet released)
 * protocol
   - "tagtypes" requires no permissions
+* database
+  - simple: fix crash when mounting twice
 * fix unit test failure
 
 ver 0.21.23 (2020/04/23)
