--- a/NEWS
+++ b/NEWS
@@ -3,9 +3,11 @@ ver 0.21.24 (not yet released)
   - "tagtypes" requires no permissions
 * database
   - simple: fix crash when mounting twice
+* Android
+  - fix build failure with Android NDK r21
+* Windows
+  - work around Meson bug breaking the Windows build with GCC 10
 * fix unit test failure
-* fix build failure with Android NDK r21
-* work around Meson bug breaking the Windows build with GCC 10
 
 ver 0.21.23 (2020/04/23)
 * protocol
