decoder/Bridge: add flag to make initial seek errors fatal
When the client wants to seek, but the decoder has already finished
decoding the current song, the player restarts the decoder with an
initial seek at the new position.  When this initial seek fails, MPD
pretends nothing has happened and plays this song from the start.

With this new flag, a restarted decoder marks the initial seek as
"essential" and fails the decoder if that seek fails.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/895

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ ver 0.21.24 (not yet released)
   - modplug: fix Windows build failure
   - wildmidi: attempt to detect WildMidi using pkg-config
   - wildmidi: fix Windows build failure
+* player
+  - don't restart current song if seeking beyond end
 * Android
   - enable the decoder plugins ModPlug and WildMidi
   - fix build failure with Android NDK r21
