queue/PlaylistEdit: fix crash in SetSongIdRange() while playing
An assertion failure in UpdateQueuedSong() could trigger because the
`prev` parameter is always `nullptr`, but `queued` may be set.  And in
fact, calling UpdateQueuedSong() is only necessary when the queued
song was edited, to re-queue it with the new range.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/901

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.21.25 (not yet released)
+* protocol:
+  - fix crash when using "rangeid" while playing
 
 ver 0.21.24 (2020/06/10)
 * protocol
