--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ ver 0.21.25 (not yet released)
 * protocol:
   - fix crash when using "rangeid" while playing
 * input
+  - file: detect premature end of file
   - smbclient: don't send credentials to MPD clients
 
 ver 0.21.24 (2020/06/10)
