decoder/opus: implement End Trimming (RFC7845 4.4)
Closes https://github.com/MusicPlayerDaemon/MPD/issues/867

--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ ver 0.21.25 (not yet released)
   - file: detect premature end of file
   - smbclient: don't send credentials to MPD clients
 * decoder
-  - opus: apply pre-skip
+  - opus: apply pre-skip and end trimming
   - opus: fix memory leak
 * output
   - osx: improve sample rate selection
