output/osx: don't restart AudioUnit at the end of Cancel()
We shouldn't restart the AudioUnit while the ring buffer is empty, or
else our render callback may emit noise.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/771

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ ver 0.21.25 (not yet released)
   - opus: fix memory leak
 * output
   - osx: improve sample rate selection
+  - osx: fix noise while stopping
 * Windows/Android:
   - fix Boost detection after breaking change in Meson 0.54
 
