--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.21.25 (not yet released)
 * protocol:
   - fix crash when using "rangeid" while playing
+* storage
+  - udisks: fix reading ".mpdignore"
 * input
   - file: detect premature end of file
   - smbclient: don't send credentials to MPD clients
