--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ ver 0.21.25 (not yet released)
   - fix crash when using "rangeid" while playing
 * database
   - simple: automatically scan new mounts
+  - upnp: fix compatibility with Plex DLNA
 * storage
   - fix disappearing mounts after mounting twice
   - udisks: fix reading ".mpdignore"
