*/smbclient: use the new API with SMBCCTX parameter
As a side effect, the input plugin closes the SMB/CIFS connection
after closing the file.

This solves one part of
https://github.com/MusicPlayerDaemon/MPD/issues/916

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ ver 0.22 (not yet released)
   - curl: support "charset" parameter in URI fragment
   - ffmpeg: allow partial reads
   - io_uring: new plugin for local files on Linux (using liburing)
+  - smbclient: close unused SMB/CIFS connections
 * archive
   - iso9660: support seeking
 * database
