output/osx: catch kAudioDevicePropertyHogMode errors
Our AudioObjectGetPropertyDataT() wrapper throws exception on error,
and calling it from OSXOutput::Disable() can cause MPD crash due to
std::terminate().

Closes https://github.com/MusicPlayerDaemon/MPD/issues/932

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 ver 0.21.26 (not yet released)
 * output
+  - osx: fix crash bug
   - sles: support floating point samples
 
 ver 0.21.25 (2020/07/06)
