decoder/sndfile: allow partial reads at end of file
While libsndfile doesn't like partial reads in the middle of a file
(see commit 95ac6071b9), it allows partial reads at the end of a file.
It doesn't pay attention to the file size when issuing a read.

Commit ecb67a1ed16e9 (MPD 0.18.12) was a regression: previously,
partial reads at the end of a file were possible, but switching to
decoder_read_full() made this an error condition.  This way, a portion
at the end of each file was lost, leading to corruption with gapless
playback (https://github.com/MusicPlayerDaemon/MPD/issues/936).

This fix switches to the newly introduced function
decoder_read_much(), which does the same as the code before commit
ecb67a1ed16e93.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/936

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ ver 0.21.26 (not yet released)
 * output
   - osx: fix crash bug
   - sles: support floating point samples
+* decoder
+  - sndfile: fix lost samples at end of file
 
 ver 0.21.25 (2020/07/06)
 * protocol:
