archive/zzip: fix crash on corrupt ZIP file
Sometimes, zzip_file_read() returns 0 even though the end of the file
was not reached.  This causes assertion failures in
DecoderBridge::Read().

Closes https://github.com/MusicPlayerDaemon/MPD/issues/935

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ ver 0.21.26 (not yet released)
 * output
   - osx: fix crash bug
   - sles: support floating point samples
+* archive
+  - zzip: fix crash on corrupt ZIP file
 * decoder
   - sndfile: fix lost samples at end of file
 
