archive/bzip2: throw on unexpected input EOF
Don't silently return 0 when there is no more data, because this may
crash the caller.  And flush output even if input EOF has been reached.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ ver 0.21.26 (not yet released)
   - osx: fix crash bug
   - sles: support floating point samples
 * archive
+  - bzip2: fix crash on corrupt bzip2 file
+  - bzip2: flush output at end of input file
   - zzip: fix crash on corrupt ZIP file
 * decoder
   - sndfile: fix lost samples at end of file
