decoder/ffmpeg: remove "rtsp://" from the list of supported protocols
FFmpeg implements RTSP as a demuxer, not as a protocol handler.  Thus,
avio_open() cannot be used, and our input plugin cannot handle RTSP.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/930

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ ver 0.21.26 (not yet released)
   - iso9660: support seeking
   - zzip: fix crash on corrupt ZIP file
 * decoder
+  - ffmpeg: remove "rtsp://" from the list of supported protocols
   - sndfile: fix lost samples at end of file
 
 ver 0.21.25 (2020/07/06)
