LogBackend: change the initial log_threshold to DEFAULT
The log levels have always been very confusing (and badly named), but
this was most confusing: if there's a log level called "default", why
is it not the default?

Closes https://github.com/MusicPlayerDaemon/MPD/issues/926

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ ver 0.21.26 (not yet released)
   - ffmpeg: remove "rtsp://" from the list of supported protocols
   - ffmpeg: add "hls+http://" to the list of supported protocols
   - sndfile: fix lost samples at end of file
+* the default log_level is "default", not "info"
 
 ver 0.21.25 (2020/07/06)
 * protocol:
