--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.22 (not yet released)
+ver 0.22 (2020/09/23)
 * protocol
   - "findadd"/"searchadd"/"searchaddpl" support the "sort" and
     "window" parameters
