output/alsa: implement Interrupt()
This allows canceling the blocking method LockWaitWriteAvailable(),
and thus allows breaking free of misbehaving ALSA drivers, avoiding a
MPD lockup.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/966

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.1 (not yet released)
+* output
+  - alsa: don't deadlock when the ALSA driver is buggy
 
 ver 0.22 (2020/09/23)
 * protocol
