--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ ver 0.22.1 (not yet released)
   - alsa: don't deadlock when the ALSA driver is buggy
   - jack, pulse: reduce the delay when stopping or pausing playback
 * playlist
-  - cue: fix crash bug
+  - cue: fix two crash bugs
 
 ver 0.22 (2020/09/23)
 * protocol
