config/Data: cast to std::chrono::steady_clock::duration properly
Oh no, 3413d1bf23a was broken!  Instead of passing a number as
"seconds" to the duration constructor, it just abused the duration
constructor as cast operator, which caused custom state_file_interval
settings to be extremely short.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ ver 0.22.1 (not yet released)
   - jack, pulse: reduce the delay when stopping or pausing playback
 * playlist
   - cue: fix two crash bugs
+* state_file: fix the state_file_interval setting
 
 ver 0.22 (2020/09/23)
 * protocol
