decoder/opus: fix track/album ReplayGain fallback
Fixes regression by commit 23d5a2b8620cea69958d087fc7e13fe1e5adb83d -
that commit always pretended that any Opus file has both track and
album gain, and thus disabled the fallback to the other if one is not
set.

This patch changes the logic to only submit ReplayGain if at least one
value is set, and apply the offset only to that value.  If none is
available, then the new check in HandleAudio() will submit only the
output gain.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/977

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.22.1 (not yet released)
 * decoder
   - opus: apply the OpusHead output gain even if there is no EBU R128 tag
+  - opus: fix track/album ReplayGain fallback
 * output
   - alsa: don't deadlock when the ALSA driver is buggy
   - jack, pulse: reduce the delay when stopping or pausing playback
