--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ver 0.22.2 (not yet released)
+
 ver 0.22.1 (2020/10/17)
 * decoder
   - opus: apply the OpusHead output gain even if there is no EBU R128 tag
