Main: save the state_file on shutdown
This got lost in commit 5d597a3646cc (v0.21.19), but it was never
noticed because the state_file_interval was way too short due to
commit 3413d1bf23a, fixed recently by commit 27cc7b352d5

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ ver 0.22.2 (not yet released)
 * database
   - simple: purge songs and virtual directories for unavailable plugins
     on update
+* state_file: save on shutdown
 
 ver 0.22.1 (2020/10/17)
 * decoder
