meson_options.txt: disable the "smbclient" plugin by default
The bug https://bugzilla.samba.org/show_bug.cgi?id=11413 makes MPD
crash after at most a minute of using the plugin.  Since this bug is
five years old already and it doesn't look like it will ever be fixed,
all libsmbclient code in MPD is scheduled for removal.  For now, the
plugin is disabled by default so people are less likely to hit the
crash bug.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/991

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ ver 0.22.2 (not yet released)
     on update
 * input
   - qobuz/tidal: fix protocol errors due to newlines in error messages
+  - smbclient: disable by default due to libsmbclient crash bug
 * playlist
   - soundcloud: fix protocol errors due to newlines in error messages
 * state_file: save on shutdown
