--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+ver 0.22.3 (not yet released)
+* playlist
+  - add option "as_directory", making CUE file expansion optional
+
 ver 0.22.2 (2020/10/28)
 * database
   - simple: purge songs and virtual directories for unavailable plugins
@@ -6,7 +10,6 @@ ver 0.22.2 (2020/10/28)
   - qobuz/tidal: fix protocol errors due to newlines in error messages
   - smbclient: disable by default due to libsmbclient crash bug
 * playlist
-  - add option "as_directory", making CUE file expansion optional
   - soundcloud: fix protocol errors due to newlines in error messages
 * state_file: save on shutdown
 
