storage/curl: fix nullptr dereference
Pass a std::string to PathTraitsUTF8::Relative(), implicitly casting
it to std::string_view.  This selects the right overload which returns
std::string_view instead of `const char *`; the latter could return
`nullptr` which would cause the implicit conversion of the return
value to std::string_view to crash.

Regression caused by commits ead208987dd and a98d627c0bd.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/995

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.22.3 (not yet released)
 * playlist
   - add option "as_directory", making CUE file expansion optional
+* storage
+  - curl: fix crash bug
 * filter
   - fix garbage after "Audio format not supported by filter" message
   - ffmpeg: support planar output
