--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ver 0.22.4 (not yet released)
+
 ver 0.22.3 (2020/11/06)
 * playlist
   - add option "as_directory", making CUE file expansion optional
