--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.4 (not yet released)
+* protocol
+  - fix "readpicture" on 32 bit machines
 * storage
   - curl: fix several WebDAV protocol bugs
 * decoder
