--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.5 (not yet released)
+* tags
+  - id: translate TPE3 to Conductor, not Performer
 * output
   - httpd: error handling on Windows improved
 
