archive/iso9660: another fix for unaligned reads
Commit 79b2366387dcd5f4ccae50eacf1ae06973f01d83 added the field `skip`
to support unaligned reads, but set the `offset` field to a wrong
value.  This resulted in miscalculation of `remaining`, causing
an assertion failure.

The fix is to assign `offset` the correct value, but consider the
`skip` value in the assertion.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1067

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.22.5 (not yet released)
 * tags
   - id: translate TPE3 to Conductor, not Performer
+* archive
+  - iso9660: another fix for unaligned reads
 * output
   - httpd: error handling on Windows improved
 
