output/pulse: don't drain if stream is suspended or corked
In this state, we can't make any progress.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1084

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.22.5 (not yet released)
   - iso9660: another fix for unaligned reads
 * output
   - httpd: error handling on Windows improved
+  - pulse: fix deadlock with "always_on"
 * Windows:
   - enable https:// support (via Schannel)
 
