android/AndroidManifest.xml: enable requestLegacyExternalStorage
This is a workaround for the new scoped storage design in Android 11:

 https://developer.android.com/about/versions/11/privacy/storage

This needs a proper solution eventually, but this quick fix will do
until we change "targetSdkVersion" to 30.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1061

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ ver 0.22.5 (not yet released)
   - pulse: fix deadlock with "always_on"
 * Windows:
   - enable https:// support (via Schannel)
+* Android
+  - work around "Permission denied" on mpd.conf
 
 ver 0.22.4 (2021/01/21)
 * protocol
