--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.5 (not yet released)
+* protocol
+  - error for malformed ranges instead of ignoring silently
 * database
   - simple: fix missing CUE sheet metadata in "addid" command
 * tags
