command/queue: better error message for open-ended range with "move"
The "move" command doesn't allow open-ended ranges because they don't
make a lot of sense; moving an open-ended range is only possible if
the destination index is before the range, and in that case, the
client should be well aware how many songs there are.

Closes https://github.com/MusicPlayerDaemon/MPD/pull/1057

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.22.5 (not yet released)
 * protocol
   - error for malformed ranges instead of ignoring silently
+  - better error message for open-ended range with "move"
 * database
   - simple: fix missing CUE sheet metadata in "addid" command
 * tags
