output/snapcast: new output plugin
New experimental code, first draft - it works, but there's a lot left
to do.  Just look at all the TODO comments.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/975

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23 (not yet released)
 * protocol
   - new command "getvol"
+* output
+  - snapcast: new plugin
 
 ver 0.22.6 (2021/02/16)
 * fix missing tags on songs in queue
