song/DetachedSong: copy the AudioFormat from LightSong
Enables the "Format" row in "playlistinfo" responses.

https://github.com/MusicPlayerDaemon/MPD/issues/1094

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.23 (not yet released)
 * protocol
   - new command "getvol"
+  - show the audio format in "playlistinfo"
 * output
   - snapcast: new plugin
 
