decoder/ffmpeg: fix build problem with FFmpeg 3.4
Regression by commit a22d1c88d7e11bfdc553f38a86d416783421c7e4

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1097

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.7 (not yet released)
+* decoder
+  - ffmpeg: fix build problem with FFmpeg 3.4
 
 ver 0.22.6 (2021/02/16)
 * fix missing tags on songs in queue
