--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.7 (not yet released)
+* protocol
+  - don't use glibc extension to parse time stamps
 * decoder
   - ffmpeg: fix build problem with FFmpeg 3.4
 * storage
