--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.22.7 (not yet released)
 * decoder
   - ffmpeg: fix build problem with FFmpeg 3.4
+* storage
+  - curl: don't use glibc extension
 
 ver 0.22.6 (2021/02/16)
 * fix missing tags on songs in queue
