Added cross-origin header to http headers of the http output.
The current http output doesn't provide a header for cross-origin support. This prevents to use the mpd http stream directly from an other webapplication due the origin from the webpage differs from then the audio stream.

The fix is to add the following header to the http response:
Access-Control-Allow-Origin: *

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ ver 0.22.7 (not yet released)
 * storage
   - curl: don't use glibc extension
 * output
+  - httpd: send header "Access-Control-Allow-Origin: *"
   - wasapi: add algorithm for finding usable audio format
   - wasapi: use default device only if none was configured
   - wasapi: add DoP support
