output/jack: enable on Windows
This enables the JACK output plugin on Windows, but doesn't link
against libjack64.dll, instead loads the DLL at runtime with
LoadLibrary().  This kludge avoids the extremely fragile JACK shared
memory protocol by using the system's libjack64.dll, without requiring
the same DLL at build time.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ ver 0.22.7 (not yet released)
   - simple: fix database corruption bug
 * output
   - fix crash when pausing with multiple partitions
+  - jack: enable on Windows
   - httpd: send header "Access-Control-Allow-Origin: *"
   - wasapi: add algorithm for finding usable audio format
   - wasapi: use default device only if none was configured
