--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ ver 0.22.7 (not yet released)
   - gme: support RSN files
 * storage
   - curl: don't use glibc extension
+* database
+  - simple: fix database corruption bug
 * output
   - httpd: send header "Access-Control-Allow-Origin: *"
   - wasapi: add algorithm for finding usable audio format
