{input,storage}/curl: set CURLOPT_HTTPAUTH=CURLAUTH_BASIC
With the default value CURLAUTH_ANY, libcurl needs to probe for
authentication methods first, and only the second request will have an
Authorization header.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1155

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.22.7 (not yet released)
 * protocol
   - don't use glibc extension to parse time stamps
+* input
+  - curl: send user/password in the first request, save one roundtrip
 * decoder
   - ffmpeg: fix build problem with FFmpeg 3.4
   - gme: support RSN files
