--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.22.7 (not yet released)
+ver 0.22.7 (2021/05/19)
 * protocol
   - don't use glibc extension to parse time stamps
   - optimize the "albumart" command
