--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.22.8 (not yet released)
+ver 0.22.8 (2021/05/22)
 * fix crash bug in "albumart" command (0.22.7 regression)
 
 ver 0.22.7 (2021/05/19)
