db/simple/ExportedSong: check src.OwnsTag(), not this->OwnsTag()
this->OwnsTag() accesses fields that are not yet initialized.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.22.10 (not yet released)
 * protocol
   - support "albumart" for virtual tracks in CUE sheets
+* database
+  - simple: fix crash bug
 
 ver 0.22.9 (2021/06/23)
 * database
