decoder/Bridge: call UpdateStreamTag() only if there is no pending seek
If UpdateStreamTag() gets called while an initial seek is pending, the
result will never be submitted to a MusicChunk.  By avoiding the
UpdateStreamTag() call in that case (by moving UpdateStreamTag() to
after the PrepareInitialSeek() check), the song_tag is preserved until
UpdateStreamTag() is called again from SubmitData().

This fixes missing tags in the "httpd" output.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1137

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ ver 0.22.10 (not yet released)
 * tags
   - fix crash caused by bug in TagBuilder and a few potential reference leaks
 * output
+  - httpd: fix missing tag after seeking into a new song
   - oss: fix channel order of multi-channel files
 
 ver 0.22.9 (2021/06/23)
