--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.22.10 (not yet released)
+ver 0.22.10 (2021/08/06)
 * protocol
   - support "albumart" for virtual tracks in CUE sheets
 * database
