decoder/wavpack: fix WVC file support
The wrong variable was used.  This has been broken by commit
4eeea640f4 seven years ago - and nobody as noticed, d'oh!

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ ver 0.23 (not yet released)
   - upnp: support libnpupnp instead of libupnp
 * decoder
   - openmpt: new plugin
+  - wavpack: fix WVC file support
 * output
   - oss: support DSD over PCM
   - pipewire: new plugin
