output/snapcast: fix typo which caused "Failed to get chunk"
This bug caused a 9 second offset in all time stamps.  Due to that,
the Snapcast server thought the chunks are too old and discarded them.

Fixes https://github.com/MusicPlayerDaemon/MPD/discussions/1287

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.1 (not yet released)
+* output
+  - snapcast: fix time stamp bug which caused "Failed to get chunk"
 * fix libfmt linker problems
 * fix broken password authentication
 
