client/Response: reimplement Error() without FmtError()
With libfmt versions older than 7, this leads to an endless recursion
between Error() and FmtError(), resulting in a crash due to stack
overflow.  D'oh!

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1295

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.23.2 (not yet released)
 * neighbor
   - mention failed plugin name in error message
+* fix crash with libfmt versions older than 7
 
 ver 0.23.1 (2021/10/19)
 * protocol
