lib/nfs/FileReader: use the thread-safe InjectEvent
.. instead of DeferEvent, which is not thread-safe.  This caused
various playback problems, which was initially caused by the
DeferEvent/InjectEvent split in commit 774b4313f2acf

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1298

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.2 (not yet released)
+* input
+  - nfs: fix playback bug
 * output
   - pipewire: send artist and title to PipeWire
 * neighbor
