outputs/pipewire: fix ParamChanged incorrectly setting volume
Previous versions of MPD would, on parameter change, set the PipeWire
volume before clearing the restore_volume flag, causing the call to
short circuit and do nothing. Instead, clear the flag before the call.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ ver 0.23.7 (not yet released)
 * output
   - shout: require at least libshout 2.4.0
 * mixer
+  - pipewire: fix volume restore
   - software: update volume of disabled outputs
 * support libiconv
 
