decoder/OggSyncState: allow skipping up to 64 kB after seek
This is more of what we did in commit 70bd35abe2ab because it turns
out there are Ogg-Opus files with pages larger than 40 kB.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1487

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.7 (not yet released)
+* decoder
+  - opus: fix missing song length on high-latency files
 
 ver 0.23.6 (2022/03/14)
 * protocol
