upnp: use UpnpInit2 always
libupnp 1.14 removes the non 2 function. Fixes compilation there.

Signed-off-by: Rosen Penev <rosenp@gmail.com>

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1499

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.7 (not yet released)
+* database
+  - upnp: support pupnp 1.14
 * decoder
   - opus: fix missing song length on high-latency files
 * output
